make my profile prettier

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <!-- PROFILE PIC -->
         <img src="images/profile_pic.jpg" alt="Andy's profile pic">
         <!-- A BUTTON -->
-        <a class="btn-blue" href="https://www.youtube.com/watch?v=YDj3JHtIviQ">Checkout my video</a>
+        <h2>CODER. FORMER ENGLISH TEACHER. DROID.</h2>
+        <!-- <a class="btn-blue" href="https://www.youtube.com/watch?v=YDj3JHtIviQ">Checkout my video</a> -->
         
       </div>
       <div class="card-offwhite">
-        <h2>WHAT DOES HE DO?</h2>
+        <h2>WHAT DOES ANDY DO?</h2>
       </div>
       <div class="card-offwhite">
         <img src="images/coding.jpeg" class="card-img" alt="That's numberwang!">
