make my profile prettier

--- a/index.html
+++ b/index.html
@@ -17,33 +17,30 @@
       <div class="card-offwhite">
         <h1>ANDREW ROBERT WALLACE</h1>
         <!-- PROFILE PIC -->
-        <img src="images/profile_pic.jpg" alt="Andy's profile pic">
+        <img src="images/profile_pic.jpg" class="main-img" alt="Andy's profile pic">
         <!-- A BUTTON -->
         <h2>CODER. FORMER ENGLISH TEACHER. DROID.</h2>
         <!-- <a class="btn-blue" href="https://www.youtube.com/watch?v=YDj3JHtIviQ">Checkout my video</a> -->
         
       </div>
       <div class="card-offwhite">
-        <h2>WHAT DOES ANDY DO?</h2>
-      </div>
-      <div class="card-offwhite">
         <img src="images/coding.jpeg" class="card-img" alt="That's numberwang!">
-        <h3>HE CODES.</h3>
+        <h2>HE CODES.</h2>
         <p>Fluent in over 6 million forms of communication, and <strong>ruby</strong>.</p>
       </div>
       <div class="card-offwhite">
         <img src="images/squig.jpg"  class="card-img" alt="Goblin your food is bad for your elf!">
-        <h3>HE PAINTS MINIATURES</h3>
-        <p>Toy soldiers, innit.</p>
+        <h2>HE PAINTS MINIATURES</h2>
+        <a href="https://www.instagram.com/strange_generator/?hl=en">Toy soldiers, innit.</a>
       </div>
       <div class="card-offwhite">
         <img src="images/samneil.jpg"  class="card-img" alt="That's numberwang!">
-        <h3>HE WATCHES MOVIES</h3>
+        <h2>HE WATCHES MOVIES</h2>
         <p>"All these moments will be lost. Like tears in the rain."</p>
       </div>
       <div class="card-offwhite">
         <img src="images/karaoke.jpg"  class="card-img" alt="That's numberwang!">
-        <h3>HE DOES KARAOKE</h3>
+        <h2>HE DOES KARAOKE</h2>
         <p>"God save the queen!"</p>
       </div>
       <div class="card-offwhite">
