make my profile prettier

--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
       </div>
       <div class="card-offwhite">
         <img src="images/coding.jpeg" class="card-img" alt="That's numberwang!">
-        <h2>HE CODES.</h2>
+        <h2>CODING</h2>
         <p>Fluent in over 6 million forms of communication, and <strong>ruby</strong>.</p>
       </div>
       <div class="card-offwhite">
         <img src="images/squig.jpg"  class="card-img" alt="Goblin your food is bad for your elf!">
-        <h2>HE PAINTS MINIATURES</h2>
+        <h2>PAINTING</h2>
         <a href="https://www.instagram.com/strange_generator/?hl=en">Toy soldiers, innit.</a>
       </div>
       <div class="card-offwhite">
         <img src="images/samneil.jpg"  class="card-img" alt="That's numberwang!">
-        <h2>HE WATCHES MOVIES</h2>
+        <h2>MOVIES</h2>
         <p>"All these moments will be lost. Like tears in the rain."</p>
       </div>
       <div class="card-offwhite">
         <img src="images/karaoke.jpg"  class="card-img" alt="That's numberwang!">
-        <h2>HE DOES KARAOKE</h2>
+        <h2>KARAOKE</h2>
         <p>"God save the queen!"</p>
       </div>
       <div class="card-offwhite">
