make my profile prettier

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- PROFILE PIC -->
         <img src="images/profile_pic.jpg" class="main-img" alt="Andy's profile pic">
         <!-- A BUTTON -->
-        <h2>CODER. FORMER ENGLISH TEACHER. DROID.</h2>
+        <h2>CODER. EX-ENGLISH TEACHER. DROID.</h2>
         <!-- <a class="btn-blue" href="https://www.youtube.com/watch?v=YDj3JHtIviQ">Checkout my video</a> -->
         
       </div>
